bug fix - isotope items jumping on filtering
so apparently when you use transform on isotope it glitches and the item jumps, to prevent this, I created a new clickable-inner and wrapped the item that I wanna transform inside this, and didn't use the outer wrapper that isotope uses. It took me another 1 hour to figure this all out.

--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -196,6 +196,8 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  overflow-anchor: none;
+
   /* border: 2px solid blue; */
 }
 
@@ -206,15 +208,24 @@
   padding: 20px;
   border-radius: 0.19rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  transition: 0.3s;
+  /* transition: 0.3s ease;  */
   box-sizing: border-box;
   width: 100%;
+  
 
   /* border: 2px solid red; */
 }
+.clickable-inner {
+  transition: transform 0.3s ease;
+  will-change: transform;
+  width: 100%;
+  display: flex;
+  align-items: flex-start; /* ✅ Align content to the top */
+  gap: 20px;
+  padding: 20px;
+}
 
-
-.work-list-item:hover {
+.clickable-inner:hover {
   transform: scale(0.97);
 }
 
